#      2021.7.2      #
#                    #
######################
New features and other changes:
1. Made notifier parameter in Send-ToastNotification dynamic.
2. Modified Get-NotificationApp so that it shows the actual Display Name that is displayed on Toast notifications.
3. Added a field to the output of Get-NotificationApp that combines the DisplayName and Name outputs.

######################
#                    #
#      2021.7.1      #
#                    #
######################
New features and other changes:
1. Added Send-ToastNotification to InstallRemote.ps1.
2. Changed ActivClient install in InstallRemote.ps1 to only check Major.Minor version instead of Major.Minor.Revision.
3. Added Toast notifications to several installs in InstallRemote.ps1. It defaults to the "Security and Maintenance" notifier.
4. Added PrintNightmare registry value fixes to Set-RemediationValues.
5. Added function Set-PrintNightmareFix which can be ran against remote computers/servers. Includes a -DisableSpooler switch that can be used when running on the local machine.
6. Added DisabledByDefault value to the server key for Disable-TLS1.0 and Enable-TLS1.0.
7. Added DisabledByDefault value with data of "1" to the server key for TLS1.0 in Set-RemediationValues.
8. Added function Get-NotificationApp (aka Get-ToastNotifierApp and Get-ToastNotificationApp) which can be used to show registered Toast Notification Apps.

######################
#                    #
#      2021.7.0      #
#                    #
######################
New features and other changes:
1. Fixed software version update file comparison to installed program version failing due to number from software version file being seen as a string instead of an integer.
2. Removed some excess notifications from InstallRemote.ps1 and also disabled "skipping" notifications so now you should only see when things are installing.

######################
#                    #
#       2021.6       #
#                    #